refactor, weak references in caches